feat: change logging to log request + response for debug